--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": "react-app"
+  "extends": "react-app",
+  "parserOptions": {
+    "sourceType": "module",
+    "ecmaVersion": 2022
+  }
 }
